fixed nav bar on mobile + styling on contacts card

--- a/web-app/assets/css/styles.css
+++ b/web-app/assets/css/styles.css
@@ -1,4 +1,7 @@
 @media (max-width: 480px) {
+.contact-card {
+  margin: 3px;
+}
 .input-group-addon, .input-group-btn, .input-group .form-control {
     display: block;
     margin-bottom: 10px;
